ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-api-gateway
  namespace: consul
spec:
  rules:
    - host: consul-api-gateway.legible-fly.kat.cmmaz.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
